Temp fix for NavMenu backdrop bug on iOS Safari

--- a/src/components/Navbar/styles/navMenu.module.css
+++ b/src/components/Navbar/styles/navMenu.module.css
@@ -3,7 +3,7 @@ menu {
   z-index: 2;
   top: 0;
   left: 0;
-  height: 100svh;
+  height: 100%;
   width: min(80vw, 360px);
   padding: 30px;
 
@@ -46,9 +46,8 @@ nav {
 
 .menuBackdrop {
   position: fixed;
-  z-index: 1;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   background-color: hsla(0, 0%, 70%, 0.6);
   backdrop-filter: blur(2px);
 }
